--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "memoize-one": "^5.0.0",
     "react": "^16.8.4",
     "react-container-query": "^0.11.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.4",
     "react-media": "^1.9.2",
